# cxy_benchmark

./: .coveragerc  .dockerignore  .env.example  .gitignore  ARCHITECTURE_REPORT.md  Dockerfile  Dockerfile.manager  README.md  README_en.md  Third_Party_Open_Source_Software_Notice  aggregate_eval_reports.py  automated_evaluation_manual.md  check_eval_data.py  convert.py  deploy.md  docker-compose.yml  eval_entry.py  eval_judge.py  export_single_eval.py  hello.py  merge_eval_v3_into_init.py  merge_eval_v3_into_v2.py  multi_deploy_benchmark.sh  patch_missing_datasets.py  process_results.py  run.sh  run_benchmark_generic.py  run_eval_container.sh  run_maas_demo.sh  run_mixed_benchmark.sh  run_mixed_benchmark_batched.sh  run_new_eval.sh  run_pipeline.sh  setup.py  start-local.sh  test.py  update_metrics.py
backend/: Dockerfile  README.md  pyproject.toml
backend/app/: config.py  db.py  deps.py  main.py  models.py  schemas.py  task_meta.py
backend/app/routers/: auth.py  batches.py  evaluations.py  jobs.py  judges.py  models.py  predictions.py  tasks.py  users.py
backend/docs/: p0_e2e.md
backend/scripts/: seed_tasks.py
backend/tests/: conftest.py  test_auth_api.py  test_auth_service.py  test_batch_actor.py  test_batch_create.py  test_batch_report.py  test_batch_rerun.py  test_datasets.py  test_docker_runner.py  test_health.py  test_init_admin.py  test_jobs_api.py  test_judges_api.py  test_migration.py  test_models.py  test_models_api.py  test_password.py  test_rbac.py  test_scan.py  test_seed.py  test_tasks_api.py  test_user_service.py  test_users_api.py  test_worker.py
(+1026 files in other folders)
