[project]
name = "eval-backend"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy>=2.0",
    "pydantic>=2.8",
    "pydantic-settings>=2.4",
    "pyyaml>=6.0",
    "python-multipart>=0.0.9",
    "passlib[bcrypt]>=1.7.4",
]

[project.optional-dependencies]
dev = ["pytest>=8", "httpx>=0.27", "pytest-asyncio>=0.23"]

[tool.pytest.ini_options]
pythonpath = [".."]
asyncio_mode = "auto"
